Closeout update to text

--- a/views/closeout.html
+++ b/views/closeout.html
@@ -8,13 +8,13 @@
       <div class="heading">Give us the project specifications and your raw site files. We'll get you and your client paid</div>
       <div class="content">
         <p>
-          Ontel is one of the largest providers of closeout services in the U.S and growing. Our success is based on our deep industry knowledge and exceptional in-house developed software. Our clients depend on us for our wireless experience, technical expertise, and our commitment to world-class service. Whether it's undocumentated requirements, crews that are less than stellar with their attention to detail, or markets about to explode under the pressure of project demands, we know what it takes to be successful and get and your invoices accepted.
+          Ontel is one of the largest providers of closeout services in the U.S and growing. Our success is based on our deep industry knowledge and exceptional in-house developed software. Our clients depend on us for our wireless experience, technical expertise, and our commitment to world-class service. Whether it's undocumentated requirements, less than stellar attention to detail, or markets about to explode under the pressure of project demands, we know what it takes to be successful and get and your invoices accepted.
         </p>
         <p>
-          Companies choose us over hiring and traditional outsourcing providers because of our specialization around the closeout process and the advantages of focusing on this aspect of the project workflow. Our focus brings better results, that scale up and down with demand, all at a low, fixed-cost. 
+          Companies choose us over hiring, or traditional outsourcing providers because of our specialization. No other company focuses as much on the closeout process, and the advantages gained from this specialization keeps our clients on top of the expanding demands and shortened timelines their customers expect. Our C.O.P management services are perfect for large volume projects with definite timelines, because they scale up and down with demand, augment construction and project management resources so that you hire less, all at a low, fixed-cost. 
         </p>
         <p>
-          Our closeout management services come with a 100% risk-free offer, try us out, and if we can't compete with your existing resources, or if you don't find our service to your liking, we won't charge a cent.
+          Our closeout management services come with a 100% risk-free offer, along with cutting edge, industry leading software. Try us out, and if we can't compete with your existing resources, or if you're not 100% satisfied with our services, we won't charge a cent.
         </p>
       </div>
     </div>
@@ -23,7 +23,7 @@
     <div class="section">
       <div class="heading">How can we lead across quality, speed, and cost?</div>
       <div class="content">
-        <span>Technology is how we provide the highest quality technical and construction input throughout the closeout process while also leading in speed and cost. We do this through our use of Swift Traces™ and Swift Projects™ where we automate the processing of Anritsu sweep test data, and centralize project files and workflows. We also create custom project specific scripts and software, for example we've automated AT&T's RET value forms, and test data entry Verizon BAWA's RF Summary (which we created for them). Our people matched with this exceptional technology enables us to streamline the processing of high-amounts of data and close out faster than anyone else.</span>
+        <span>Technology is how we provide the highest quality technical and construction input throughout the closeout process while also leading in speed and cost. We do this through our use of Swift Traces™ and Swift Projects™, where we automate the processing of Anritsu sweep test data, and centralize project files and workflows into a GUI interface that's smart, and easy to use. We also create custom project specific scripts and software, for example we've automated AT&T's RET value forms, and test data entry into Verizon Wireless' RF Summary in the Baltimore/Washington market (which we created for them as a standard that they use across most of their projects). Our people, matched with this exceptional technology enables us to streamline the processing of high-amounts of data and close projects faster than anyone else.</span>
         <div class="feature-flex col-flex list-with-desc">
           <div>
             <div class="title">Benefits</div>
@@ -31,11 +31,11 @@
               <ul>
                 <li>
                   <i class="icon ion-checkmark"></i>
-                  <span>Our C.O.P. services help our customers grow market share and invoice faster</span>
+                  <span>Our services get C.O.P's in fast, which helps our clients grow market share by signalling to their customer that you're ready for more</span>
                 </li>
                 <li>
                   <i class="icon ion-checkmark"></i>
-                  <span>Our customers improve cash-flow by reducing costs completing work more profitably</span>
+                  <span>Our customers improve cash-flow by reducing costs, time to invoice, and by completing work more profitably through return visit reduction</span>
                 </li>
               </ul>
             </div>
@@ -45,8 +45,8 @@
             <div class="body">
               <ul>
                 <li>Ontel has less than a 5% rejection rate for 2014-2016 on over 1500+ site projects, this includes rejections due to undocumented requirements </li>
-                <li>We close out out over 90% of our sites within 24 calendar hours of receiving materials when not using Swift Projects for photo management</li>
-				<li>Our clients typically grow their market-share as a result of closing out faster, nothing signals you're ready for more work than a C.O.P submitted faster than your competition.
+                <li>We close out out over 90% of our sites within 24 calendar hours of receiving materials, this includes clients that do not us Swift Projects for photo management</li>
+				<li>Our clients typically grow their market-share as a result of closing out faster, nothing signals you're ready for more work than a C.O.P submitted faster than your competition.</li>
               </ul>
             </div>
           </div>
