--- a/views/closeout.html
+++ b/views/closeout.html
@@ -64,7 +64,7 @@
             <div class="body">
               <ul>
                 <li>Tell us about your project and share your project specification documents
-                <li>Provide an example C.O.P. that the client likes, or we can help to create a gold standard if needed</li>
+                <li>Provide an example C.O.P. that the customer likes, or we can help to create a gold standard if needed</li>
               </ul>
             </div>
           </div>
