Changes to COP service description

--- a/views/closeout.html
+++ b/views/closeout.html
@@ -106,18 +106,18 @@
     <div class="section">
       <div class="heading">Common C.O.P. Deliverables</div>
       <div class="content">
-        <span>We check all deliverables for completeness and accuracy. We verify whenever possible against as-built data (photos, tests, etc) or the applicable spec document.</span>
+        <span>We check all deliverables for completeness and accuracy. We verify whenever possible against as-built data (photos, tests, etc) or the applicable spec document, and advise on common punch item issues. Included in our price is the typical mini-C.O.P. package many carriers expect on either the same day of construction completion or soon thereafter. For all of the elements below, we check for completeness, accuracy, and advise on quality realted matters.</span>
         <div class="feature-flex col-flex list-with-desc">
           <div>
             <div class="body">
               <ul>
-                <li>Quality assurance for tests and photos</li>
-                <li>Redline assistance for drawings and RF design as-built's</li>
-                <li>Carrier and LL specific forms related with the SOW</li>
+                <li>Fiber, Sweep, and PIM tests</li>
+                <li>RF design and construction drawing red-lines</li>
+                <li>Carrier and LL specific forms related with the scope of work</li>
                 <li>Punch-item correction tracking and submittal</li>
-                <li>Height Verification reports</li>
-                <li>Antenna Alignment Tool reports</li>
-                <li>RET Screenshots and worksheets</li>
+                <li>Height Verification report</li>
+                <li>Antenna Alignment Tool report</li>
+                <li>RET Screenshots and worksheet</li>
                 <li>Certifications for equipment and people</li>
                 <li>Jobsite safety documents (JSA/JHA)</li>
                 <li>Log Book entries</li>
