Closeout vs close out update across all pages

--- a/views/closeout.html
+++ b/views/closeout.html
@@ -1,20 +1,20 @@
 <topnav></topnav>
 <div id="" ng-class="{'drop-active': drop}" data-sr-container>
-  <div class="product-header closeout">
-    <div class="landing-text">Closeout Management</div>
+  <div class="product-header close out">
+    <div class="landing-text">close out Management</div>
   </div>
   <div class="product-container">
     <div class="section intro">
       <div class="heading">Give us the project specifications and your raw site files. We'll get you and your client paid</div>
       <div class="content">
         <p>
-          Ontel is one of the largest providers of closeout services in the U.S and growing. Our success is based on our deep industry knowledge and exceptional in-house developed software. Our clients depend on us for our wireless experience, technical expertise, and our commitment to world-class service. Whether it's undocumentated requirements, less than stellar attention to detail, or markets about to explode under the pressure of project demands, we know what it takes to be successful and get and your invoices accepted.
+          Ontel is one of the largest providers of close out services in the U.S and growing. Our success is based on our deep industry knowledge and exceptional in-house developed software. Our clients depend on us for our wireless experience, technical expertise, and our commitment to world-class service. Whether it's undocumentated requirements, less than stellar attention to detail, or markets about to explode under the pressure of project demands, we know what it takes to be successful and get and your invoices accepted.
         </p>
         <p>
-          Companies choose us over hiring, or traditional outsourcing providers because of our specialization. No other company focuses as much on the closeout process, and the advantages gained from this specialization keeps our clients on top of the expanding demands and shortened timelines their customers expect. Our C.O.P management services are perfect for large volume projects with definite timelines, because they scale up and down with demand, augment construction and project management resources so that you hire less, all at a low, fixed-cost. 
+          Companies choose us over hiring, or traditional outsourcing providers because of our specialization. No other company focuses as much on the close out process, and the advantages gained from this specialization keeps our clients on top of the expanding demands and shortened timelines their customers expect. Our C.O.P management services are perfect for large volume projects with definite timelines, because they scale up and down with demand, augment construction and project management resources so that you hire less, all at a low, fixed-cost. 
         </p>
         <p>
-          Our closeout management services come with a 100% risk-free offer, along with cutting edge, industry leading software. Try us out, and if we can't compete with your existing resources, or if you're not 100% satisfied with our services, we won't charge a cent.
+          Our close out management services come with a 100% risk-free offer, along with cutting edge, industry leading software. Try us out, and if we can't compete with your existing resources, or if you're not 100% satisfied with our services, we won't charge a cent.
         </p>
       </div>
     </div>
@@ -23,7 +23,7 @@
     <div class="section">
       <div class="heading">How can we lead across quality, speed, and cost?</div>
       <div class="content">
-        <span>Technology is how we provide the highest quality technical and construction input throughout the closeout process while also leading in speed and cost. We do this through our use of Swift Traces™ and Swift Projects™, where we automate the processing of Anritsu sweep test data, and centralize project files and workflows into a GUI interface that's smart, and easy to use. We also create custom project specific scripts and software, for example we've automated AT&T's RET value forms, and test data entry into Verizon Wireless' RF Summary in the Baltimore/Washington market (which we created for them as a standard that they use across most of their projects). Our people, matched with this exceptional technology enables us to streamline the processing of high-amounts of data and close projects faster than anyone else.</span>
+        <span>Technology is how we provide the highest quality technical and construction input throughout the close out process while also leading in speed and cost. We do this through our use of Swift Traces™ and Swift Projects™, where we automate the processing of Anritsu sweep test data, and centralize project files and workflows into a GUI interface that's smart, and easy to use. We also create custom project specific scripts and software, for example we've automated AT&T's RET value forms, and test data entry into Verizon Wireless' RF Summary in the Baltimore/Washington market (which we created for them as a standard that they use across most of their projects). Our people, matched with this exceptional technology enables us to streamline the processing of high-amounts of data and close projects faster than anyone else.</span>
         <div class="feature-flex col-flex list-with-desc">
           <div>
             <div class="title">Benefits</div>
@@ -135,7 +135,7 @@
       <div class="heading">Site Virtualization</div>
       <div class="content">
         <span>
-          As part of a closeout for varying construction, scoping, or audit scopes of work, you may need a greater depth of documentation than your typical photo or video C.O.P. set, such as a drone flyover, photogrammetry, etc. We advise and help our clients meet these new demands, don't hesitate to ask about how to accommodate for these new types of requirements.
+          As part of a close out for varying construction, scoping, or audit scopes of work, you may need a greater depth of documentation than your typical photo or video C.O.P. set, such as a drone flyover, photogrammetry, etc. We advise and help our clients meet these new demands, don't hesitate to ask about how to accommodate for these new types of requirements.
         </span>
         <div class="feature-flex col-flex list-with-desc">
           <div>
