--- a/views/main.html
+++ b/views/main.html
@@ -16,7 +16,7 @@
             </div>
             <div class="landing-subtext ">
                 <div>
-                    <div>Closeout</div>
+                    <div>Close out</div>
                     <div>Management</div>
                 </div>
                 <div>
@@ -28,20 +28,20 @@
     <section class="sections plan section left">
         <div class="section-content">
             <div class="heading">
-                <div class="head">We are Closeout Specialists</div>
-                <div class="sub">Closeout Services that get you paid, Starting at $199 per site-project.</div>
+                <div class="head">We are Close Out Specialists</div>
+                <div class="sub">close out Services that get you paid, Starting at $199 per site-project.</div>
             </div>
-            <div class="body">For too long people have said that you can't have it cheaper, faster, and better, all at the same time. Those days are now over. We've reached a new era of technology, where previous paradigms are no longer true. Ontel helps its clients to stay at the forefront of this change, where since our founding, we've been entrusted with over 1500+ site-project closeouts. All done cheaper, faster, and better. Proof, that with great people and technology, it is possible to have it all. We'll show you how.</div>
+            <div class="body">For too long people have said that you can't have it cheaper, faster, and better, all at the same time. Those days are now over. We've reached a new era of technology, where previous paradigms are no longer true. Ontel helps its clients to stay at the forefront of this change, where since our founding, we've been entrusted with over 1500+ site-project close outs. All done cheaper, faster, and better. Proof, that with great people and technology, it is possible to have it all. We'll show you how.</div>
         </div>
         <div class="cta-container">
-             <div class="cta" ui-sref="closeout">Closeout MGMT <i class="icon ion-android-arrow-dropright"></i></div> 
+             <div class="cta" ui-sref="close out">close out MGMT <i class="icon ion-android-arrow-dropright"></i></div> 
         </div>
     </section>
     <section class="sections run section right">
         <div class="section-content ">
             <div class="heading">
-                <div class="head">Closeout Software</div>
-                <div class="sub">The most powerful closeout software in the world, starting at $99 per month.</div>
+                <div class="head">close out Software</div>
+                <div class="sub">The most powerful close out software in the world, starting at $99 per month.</div>
             </div>
             <div class="body">Swift Projects™ is the secret to our success, and now it can be yours. We've combined aspects of products like SharePoint and Dropbox, and added innovation found no where else to make a mobile friendly, robust, software platform built specifically for wireless projects. Swift Projects enables teams to QA and close out live, get instant stats and statuses, schedule teams, manage documents, chat, and so much more. <span class="swift-cta">Find out more about how Swift can take you to the next level.</span></div>
         </div>
