--- a/views/pricing.html
+++ b/views/pricing.html
@@ -23,7 +23,7 @@
   </div>
   <div class="product-container">
     <div class="section">
-      <div class="heading">Closeout Packages</div>
+      <div class="heading">close out Packages</div>
       <div class="content">
         <div class="feature-flex col-flex list-with-desc">
           <div>
@@ -31,8 +31,8 @@
               <ul>
                 <li><span class="price-emphasis">$225 - per C.O.P. without Swift Projects</span> Per-site project without your use of Swift Projects for all carriers.</li>
 				<li><span class="price-emphasis">$199 - per C.O.P. with Swift Projects</span> Per-site project with your use of Swift Projects for all carriers. Included in this price is our setup of the per site-project requirements based on the S.O.W. 
-                <li><span class="price-emphasis">$74 per LL Package</span> Landlord packages are in addition to the C.O.P. for the carrier (Crown, SBA, ATC, etc.).</li>
-                <li><span class="price-emphasis">$39 per revision round</span> Fee for each round of revisions based on undocumented requirements from the customer, punch-item corrections, or missing files upon reporting to Ontel a site is ready for closeout </li>
+                <li><span class="price-emphasis">$74 per LL. Package</span> Landlord packages are in addition to the C.O.P. for the carrier (Crown, SBA, ATC, etc.).</li>
+                <li><span class="price-emphasis">$39 per revision round</span> Fee for each round of revisions based on undocumented requirements from the customer, punch-item corrections, or missing files upon reporting to Ontel a site is ready for close out </li>
               </ul>
             </div>
           </div>
