--- a/views/closeout.html
+++ b/views/closeout.html
@@ -31,7 +31,7 @@
               <ul>
                 <li>
                   <i class="icon ion-checkmark"></i>
-                  <span>Our services get C.O.P's in fast, which helps our clients grow market share by signalling to their customer that you're ready for more</span>
+                  <span>Our services get C.O.P.'s in fast, which helps our clients grow market share by signalling to their customer that you're ready for more</span>
                 </li>
                 <li>
                   <i class="icon ion-checkmark"></i>
@@ -45,8 +45,8 @@
             <div class="body">
               <ul>
                 <li>Ontel has less than a 5% rejection rate for 2014-2016 on over 1500+ site projects, this includes rejections due to undocumented requirements </li>
-                <li>We close out out over 90% of our sites within 24 calendar hours of receiving materials, this includes clients that do not us Swift Projects for photo management</li>
-				<li>Our clients typically grow their market-share as a result of closing out faster, nothing signals you're ready for more work than a C.O.P submitted faster than your competition.</li>
+                <li>We close out over 90% of our sites within 24 calendar hours of receiving materials, this includes clients that do not us Swift Projects for photo management</li>
+				<li>Our clients typically grow their market-share as a result of closing out faster, nothing signals you're ready for more work than a C.O.P. submitted faster than your competition.</li>
               </ul>
             </div>
           </div>
@@ -83,7 +83,7 @@
               <ul>
                 <li>We receive site information and scheduling and ensure any SOW specific items are identified in Swift Projects</li>
                 <li>We receive and review your raw files and advise on their accuracy and completeness</li>
-                <li>We compile C.O.P, complete necessary documents, and upload to client portal</li>
+                <li>We compile C.O.P., complete necessary documents, and upload to client portal</li>
                 <li>If rejections occur, we document them and incorporate it into Swift Projects to prevent them from occuring in the future</li>
               </ul>
             </div>
