management vs MGMT update on landing

--- a/views/main.html
+++ b/views/main.html
@@ -17,7 +17,7 @@
             <div class="landing-subtext ">
                 <div>
                     <div>Close out</div>
-                    <div>Management</div>
+                    <div>MGMT</div>
                 </div>
                 <div>
                     <div>Software</div>
