Landing page update

--- a/views/main.html
+++ b/views/main.html
@@ -16,7 +16,7 @@
             </div>
             <div class="landing-subtext ">
                 <div>
-                    <div>Close out</div>
+                    <div>C.O.P.</div>
                     <div>MGMT</div>
                 </div>
                 <div>
