--- a/views/pricing.html
+++ b/views/pricing.html
@@ -13,6 +13,7 @@
               <ul>
                 <li>Free initial organization setup and orientation for small businesses of 20 users or less</li>
                 <li><span class="price-emphasis">$99 per month</span> for up to 20 managed users and unlimited guests - includes 1TB of data per user</li>
+				<li><span class="price-emphasis">Free</span> 1 month trial of Swift Projects</li>
 				<li><span class="price-emphasis">Contact us</span> for quotes on additional users and data</li>
               </ul>
             </div>
@@ -23,15 +24,15 @@
   </div>
   <div class="product-container">
     <div class="section">
-      <div class="heading">close out Packages</div>
+      <div class="heading">close out Management</div>
       <div class="content">
         <div class="feature-flex col-flex list-with-desc">
           <div>
             <div class="body">
               <ul>
-                <li><span class="price-emphasis">$225 - per C.O.P.. without Swift Projects</span> Per-site project without your use of Swift Projects for all carriers.</li>
-				<li><span class="price-emphasis">$199 - per C.O.P.. with Swift Projects</span> Per-site project with your use of Swift Projects for all carriers. Included in this price is our setup of the per site-project requirements based on the S.O.W. 
-                <li><span class="price-emphasis">$74 per LL. Package</span> Landlord packages are in addition to the C.O.P.. for the carrier (Crown, SBA, ATC, etc.).</li>
+                <li><span class="price-emphasis">$225</span> C.O.P. without your use of Swift Projects, for all carriers.</li>
+				<li><span class="price-emphasis">$199</span> C.O.P. with your use of Swift Projects for all carriers.</li> 
+                <li><span class="price-emphasis">$74 per L.L. Package</span> Landlord packages are in addition to the C.O.P. for the carrier (Crown, SBA, ATC, etc.).</li>
                 <li><span class="price-emphasis">$39 per revision round</span> Fee for each round of revisions based on undocumented requirements from the customer, punch-item corrections, or missing files upon reporting to Ontel a site is ready for close out </li>
               </ul>
             </div>
