Closeout info update

--- a/views/closeout.html
+++ b/views/closeout.html
@@ -83,7 +83,7 @@
               <ul>
                 <li>We receive site information and scheduling and ensure any SOW specific items are identified in Swift Projects</li>
                 <li>We receive and review your raw files and advise on their accuracy and completeness</li>
-                <li>We compile C.O.P., complete necessary documents, and upload to client portal</li>
+                <li>We compile and validate C.O.P., complete necessary documents, and upload to client portal</li>
                 <li>If rejections occur, we document them and incorporate it into Swift Projects to prevent them from occuring in the future</li>
               </ul>
             </div>
