--- a/views/pricing.html
+++ b/views/pricing.html
@@ -12,9 +12,9 @@
             <div class="body">
               <ul>
                 <li>Free initial organization setup and orientation for small businesses of 20 users or less</li>
-                <li><span class="price-emphasis">$99 per month</span> for up to 20 managed users and unlimited guests - includes 1TB of data per user</li>
-				<li><span class="price-emphasis">Free</span> 1 month trial of Swift Projects</li>
-				<li><span class="price-emphasis">Contact us</span> for quotes on additional users and data</li>
+                <li><span class="price-emphasis">$99</span> per month for up to 20 managed users and unlimited guests - includes 1TB of data per user</li>
+				<li><span class="price-emphasis">Free Trial</span> 1 month free trial of Swift Projects for your team</li>
+				<li><span class="price-emphasis">Contact Us</span> for quotes on additional users and data</li>
               </ul>
             </div>
           </div>
@@ -24,7 +24,7 @@
   </div>
   <div class="product-container">
     <div class="section">
-      <div class="heading">close out Management</div>
+      <div class="heading">Close Out Management</div>
       <div class="content">
         <div class="feature-flex col-flex list-with-desc">
           <div>
