--- a/views/closeout.html
+++ b/views/closeout.html
@@ -106,7 +106,7 @@
     <div class="section">
       <div class="heading">Common C.O.P. Deliverables</div>
       <div class="content">
-        <span>We check all deliverables for completeness and accuracy. We verify whenever possible against as-built data (photos, tests, etc) or the applicable spec document, and advise on common punch item issues. Included in our price is the typical mini-C.O.P. package many carriers expect on either the same day of construction completion or soon thereafter. For all of the elements below, we check for completeness, accuracy, and advise on quality realted matters.</span>
+        <span>We check all deliverables for completeness and accuracy. We verify whenever possible against as-built data (photos, tests, etc) or the applicable spec document, and advise on common punch item issues. Included in our price is the typical mini-C.O.P. package many carriers expect on either the same day of construction completion or soon thereafter. For all of the elements below, we check for completeness, accuracy, and advise on quality related matters.</span>
         <div class="feature-flex col-flex list-with-desc">
           <div>
             <div class="body">
