--- a/views/swift.html
+++ b/views/swift.html
@@ -11,9 +11,8 @@
   </div>
   <div class="product-container desktop-display">
     <div class="section intro">
-      <div class="heading">How you think designed into how you work</div>
       <div class="content">
-        Swift Projects gives companies the ability to design and automate workflows, close out and QA live, and manage millions of interactions between people, forms, and files from any device. Whether your teams are in the field or in the office, with Swift, they stay connected and complete projects faster.
+        Swift Projects puts the power to design, run, and close wireless projects into the palm of your hand. With a phone or browser, Swift enables you to design detailed project workflows with 3 simple building blocks. Those blocks then automate administrative and management tasks like status updates, scheduling, uploading and downloading, and relabelling files automatically. Most importantly for our clients, Swift Projects eliminates mistakes and waste related with sharing and collaborating ineffectively. One of the main ways we do this is to make it simple to take photos and videos from the field and put them directly into the QA approval process live. There's so much more that we've packed into it, but at the end of the day, it's simple enough to set up and customize in a couple of hours systems that could completely change the way you think about running your projects and managing your resources.
       </div>
     </div>
     <img src="img/swift/full.png" class="desktop">
