--- a/views/swift.html
+++ b/views/swift.html
@@ -13,7 +13,7 @@
     <div class="section intro">
       <div class="heading">Make How You Think Into a System</div>
       <div class="content">
-        Swift Projects puts the power to design, run, and close wireless projects into the palm of your hand. With a phone or browser, Swift enables you to design detailed project workflows with 3 simple building blocks. Those blocks then automate administrative and management tasks like status updates, scheduling, uploading and downloading, and relabelling files automatically. Most importantly for our clients, Swift Projects eliminates mistakes and waste related with sharing and collaborating ineffectively.
+        Swift Projects puts the power to design, run, and close wireless projects into the palm of your hand. With a phone or browser, Swift enables you to design detailed project workflows with 3 simple building blocks. Those blocks then automate administrative and management tasks like status updates, scheduling, uploading and downloading, and relabelling files. Most importantly for our clients, Swift Projects eliminates mistakes and waste related with sharing and collaborating ineffectively.
       </div>
     </div>
 	<div class="section intro">
