--- a/views/closeout.html
+++ b/views/closeout.html
@@ -5,7 +5,7 @@
   </div>
   <div class="product-container">
     <div class="section intro">
-      <div class="heading">Give us the project specifications and your raw site files. We'll get you and your client paid</div>
+      <div class="heading">Give us the project specifications and your raw site files. We'll help get you and your client paid</div>
       <div class="content">
         <p>
           Ontel is one of the largest providers of close out services in the U.S and growing. Our success is based on our deep industry knowledge and exceptional in-house developed software. Our clients depend on us for our wireless experience, technical expertise, and our commitment to world-class service. Whether it's undocumentated requirements, less than stellar attention to detail, or markets about to explode under the pressure of project demands, we are the support your team can depend on to help you battle these challenges. 
