--- a/views/closeout.html
+++ b/views/closeout.html
@@ -5,16 +5,16 @@
   </div>
   <div class="product-container">
     <div class="section intro">
-      <div class="heading">Give us the project specifications and your raw site files. We'll help get you and your client paid</div>
+      <div class="heading">Give us the project specifications and your raw site files. We'll help get you paid faster</div>
       <div class="content">
         <p>
-          Ontel is one of the largest providers of close out services in the U.S and growing. Our success is based on our deep industry knowledge and exceptional in-house developed software. Our clients depend on us for our wireless experience, technical expertise, and our commitment to world-class service. Whether it's undocumentated requirements, less than stellar attention to detail, or markets about to explode under the pressure of project demands, we are the support your team can depend on to help you battle these challenges. 
+          Perfection means profit and we started a company on the premise that we could make closing out better for our clients, and for 3 years we've existed because of our ability to make that happen. We are about handing over a package to your customer that reflects professionlism, and helps them raise this bar to a level their competition can't reach. If you don't want to go back to site, or you'd like to signal to your client that you're the best at closing out resulting in faster payment for the both of you, then we have solutions. 
         </p>
         <p>
-          Companies choose us over hiring, or traditional outsourcing providers because of our specialization. No other company focuses as much on the close out process, and the advantages gained from this specialization keeps our clients on top of the expanding demands and shortened timelines their customers expect. Our C.O.P. management services are perfect for large volume projects with definite timelines, because they scale up and down with demand to augment your construction and project management resources.
+         No other company focuses as much on the close out process, and the advantages gained from this specialization keeps our clients on top of the expanding demands and shortened timelines their customers expect. And it pays off fpr them in growing market share and cash-flow. Our C.O.P. management services are perfect for large volume projects with demanding timelines, and scale up and down with demand to augment your construction and project management resources. 
         </p>
         <p>
-          Our close out management services come with a 100% risk-free offer, along with cutting edge, industry leading software. Try us out, and if we can't compete with your existing resources, or if you're not 100% satisfied with our services, we won't charge a cent.
+          Our close out management services come with a risk-free proposition. We expect our clients to take less risk when they work with us, and we back this up with the promise that if we can't outcompete your existing resources, or if you're not satisfied with our services, we won't charge a cent.
         </p>
       </div>
     </div>
@@ -23,7 +23,7 @@
     <div class="section">
       <div class="heading">How can we lead across quality, speed, and cost?</div>
       <div class="content">
-        <span>Technology is how we provide the highest quality technical and construction input throughout the close out process while also leading in speed and cost. We do this through our use of Swift Traces™ and Swift Projects™, where we automate the processing of Anritsu sweep test data, and centralize project files and workflows into a GUI interface that's smart, and easy to use. We also create custom project specific scripts and software, for example we've automated AT&T's RET value forms, and test data entry into Verizon Wireless' RF Summary in the Baltimore/Washington market (which we created for them as a standard that they use across most of their projects). Our people, matched with this exceptional technology enables us to streamline the processing of high-amounts of data and close projects faster than anyone else.</span>
+        <span>Technology is how we provide the highest quality technical and construction input throughout the close out process while also leading in speed and cost. We do this through our use of Swift Traces™ and Swift Projects™, where we automate the processing of Anritsu sweep test data, and centralize project files and workflows into a GUI interface that's smart, and easy to use. We also create custom project specific scripts and applications that deal with data transfer between differently formatted data, for example we've automated AT&T's RET value forms, as well as the data entry of test values into Verizon Wireless' RF Summary in the Baltimore/Washington market. Our people, matched with this exceptional technological capability enables us to streamline the processing of high-amounts of data and close projects faster than anyone else.</span>
         <div class="feature-flex col-flex list-with-desc">
           <div>
             <div class="title">Benefits</div>
