--- a/views/closeout.html
+++ b/views/closeout.html
@@ -8,13 +8,13 @@
       <div class="heading">Give us the project specifications and your raw site files. We'll help get you paid faster</div>
       <div class="content">
         <p>
-          Perfection means profit and we started a company on the premise that we could make closing out better for our clients, and for 3 years we've existed because of our ability to make that happen. We are about handing over a package to your customer that reflects professionlism, and helps them raise this bar to a level their competition can't reach. If you don't want to go back to site, or you'd like to signal to your client that you're the best at closing out resulting in faster payment for the both of you, then we have solutions. 
+          We started Ontel on the premise that we could make closing out better for our clients, and for 3 years we've existed because of our ability to make that happen. We are about handing over a package to your client that reflects professionlism, and helps you raise the standard bar to a level your competition can't reach. If you don't want to go back to for missing items and punch issue, or if you'd like to signal to your client that you're ready for more work, then we have solutions. 
         </p>
         <p>
-         No other company focuses as much on the close out process, and the advantages gained from this specialization keeps our clients on top of the expanding demands and shortened timelines their customers expect. And it pays off fpr them in growing market share and cash-flow. Our C.O.P. management services are perfect for large volume projects with demanding timelines, and scale up and down with demand to augment your construction and project management resources. 
+         No other company focuses as much on the close out process, and the advantages gained from this specialization keeps our clients on top of the expanding demands and shortened timelines their customers expect. And it pays off in bigger market share and improved cash-flow. Our C.O.P. management services are perfect for large volume projects with demanding timelines, and scale up and down with demand to augment your construction and project management resources as needed with no commitment. 
         </p>
         <p>
-          Our close out management services come with a risk-free proposition. We expect our clients to take less risk when they work with us, and we back this up with the promise that if we can't outcompete your existing resources, or if you're not satisfied with our services, we won't charge a cent.
+          Our close out management services come with a risk-free proposition. We offer your first package at no cost so you can get to know that we are committed to our clients taking less risk when they work with us than any other solution, and we are willing to prove that we can deliver on that.
         </p>
       </div>
     </div>
@@ -45,8 +45,7 @@
             <div class="body">
               <ul>
                 <li>Ontel has less than a 5% rejection rate for 2014-2016 on over 1500+ site projects, this includes rejections due to undocumented requirements </li>
-                <li>We close out over 90% of our sites within 24 calendar hours of receiving materials, this includes clients that do not us Swift Projects for photo management</li>
-				<li>Our clients typically grow their market-share as a result of closing out faster, nothing signals you're ready for more work than a C.O.P. submitted faster than your competition.</li>
+                <li>We close out over 90% of our sites within 24 calendar hours of receiving raw files, this includes clients that do not us Swift Projects for photo management</li>
               </ul>
             </div>
           </div>
