--- a/views/closeout.html
+++ b/views/closeout.html
@@ -8,7 +8,7 @@
       <div class="heading">Give us the project specs and your raw site files and We'll help get you paid faster</div>
       <div class="content">
         <p>
-          We started Ontel on the premise that we could make closing out better for our clients, and for 3 years we've existed because of our ability to make that happen. We are about handing over a package to your client that reflects professionlism, and helps you raise the standard bar to a level your competition can't reach. If you don't want to go back to for missing items and punch issue, or if you'd like to signal to your client that you're ready for more work, then we have solutions. 
+          We started Ontel on the premise that we could make closing out better for our clients, and for 3 years we've existed because of our ability to make that happen. We are about handing over a package to your client that reflects professionlism, and helps you raise the standard bar to a level your competition can't reach. If you don't want to go back to site for missing items and punch issues, or if you'd like to signal to your client that you're ready for more work, then we have solutions. 
         </p>
         <p>
          No other company focuses as much on the close out process, and the advantages gained from this specialization keeps our clients on top of the expanding demands and shortened timelines their customers expect. And it pays off in bigger market share and improved cash-flow. Our C.O.P. management services are perfect for large volume projects with demanding timelines, and scale up and down with demand to augment your construction and project management resources as needed with no commitment. 
