--- a/views/closeout.html
+++ b/views/closeout.html
@@ -31,11 +31,11 @@
               <ul>
                 <li>
                   <i class="icon ion-checkmark"></i>
-                  <span>Our services get C.O.P.'s in fast, which helps our clients grow market share by signalling to their customer that you're ready for more</span>
+                  <span>Our services get C.O.P.'s in fast, which helps you grow market share by signalling to the customer that you're ready and can handle more</span>
                 </li>
                 <li>
                   <i class="icon ion-checkmark"></i>
-                  <span>Our customers improve cash-flow by reducing costs, time to invoice, and by completing work more profitably through return visit reduction</span>
+                  <span>Our customers improve cash-flow by reducing costs, time to invoice, and completing work more profitably through waste reduction</span>
                 </li>
               </ul>
             </div>
