--- a/views/closeout.html
+++ b/views/closeout.html
@@ -35,7 +35,7 @@
                 </li>
                 <li>
                   <i class="icon ion-checkmark"></i>
-                  <span>Our customers improve cash-flow by reducing costs, time to invoice, and completing work more profitably through waste reduction</span>
+                  <span>Our customers improve cash-flow by reducing costs and time to invoice acceptance</span>
                 </li>
               </ul>
             </div>
