--- a/views/closeout.html
+++ b/views/closeout.html
@@ -5,7 +5,7 @@
   </div>
   <div class="product-container">
     <div class="section intro">
-      <div class="heading">Give us the project specs and your raw site files and We'll help get you paid faster</div>
+      <div class="heading">Give us the project specs and your raw site files and We'll help you get paid faster</div>
       <div class="content">
         <p>
           We started Ontel on the premise that we could make closing out better for our clients, and for 3 years we've existed because of our ability to make that happen. We are about handing over a package to your client that reflects professionlism, and helps you raise the standard bar to a level your competition can't reach. If you don't want to go back to site for missing items and punch issues, or if you'd like to signal to your client that you're ready for more work, then we have solutions. 
