--- a/views/swift.html
+++ b/views/swift.html
@@ -20,9 +20,9 @@
 			<p>One of the main ways we do this is to make it simple to take photos and videos from the field and put them directly into the QA approval process live. There's so much more that we've packed into it, but at the end of the day, it's simple enough to set up and customize in a couple of hours a system that could completely change the way you think about running your projects and managing your resources. Give it a try, we'd be happy to assist with you setting up and running a pilot project within your organization to see if it's the right fit for your team.
 			<p>
 		</div>
-    </div>
-	<div class="section intro">
-      
+      <a class="get-started" href="https://swiftprojects.io">
+        <span>Get Started</span>
+      </a>
     </div>
     <img src="img/swift/full.png" class="desktop">
   </div>
