--- a/views/main.html
+++ b/views/main.html
@@ -31,7 +31,7 @@
                 <div class="head">We are Close Out Specialists</div>
                 <div class="sub">close out Services that get you paid, Starting at $199 per site-project.</div>
             </div>
-            <div class="body">For too long people have said that you can't have it cheaper, faster, and better, all at the same time. Those days are now over. We've reached a new era of technology, where previous paradigms are no longer true. Ontel helps its clients to stay at the forefront of this change, where since our founding, we've been entrusted with over 1500+ site-project close outs. All done cheaper, faster, and better. Proof, that with great people and technology, it is possible to have it all. We'll show you how.</div>
+            <div class="body">For too long people have said that you can't have it cheaper, faster, and better, all at the same time. Those days are now over. We've reached a new era of technology, where previous paradigms are no longer true. Ontel helps its clients to stay at the forefront of this change, where since our founding, we've been entrusted with over 1500+ site-project close outs. All done cheaper, faster, and better. Close outs are a drag, we make them drag less. We'll show you how.</div>
         </div>
         <div class="cta-container">
              <div class="cta" ui-sref="closeout">close out MGMT <i class="icon ion-android-arrow-dropright"></i></div> 
@@ -43,7 +43,7 @@
                 <div class="head">close out Software</div>
                 <div class="sub">The most powerful close out software in the world, starting at $99 per month.</div>
             </div>
-            <div class="body">Swift Projects™ is the secret to our success, and now it can be yours. We've combined aspects of products like SharePoint and Dropbox, and added innovation found no where else to make a mobile friendly, robust, software platform built specifically for wireless projects. Swift Projects enables teams to QA and close out live, get instant stats and statuses, schedule teams, manage documents, chat, and so much more. <span class="swift-cta">Find out more about how Swift can take you to the next level.</span></div>
+            <div class="body">Swift Projects™ combines aspects of products like SharePoint and Dropbox, with added innovation found no where else, to make a mobile friendly, robust, software platform built specifically for runnin wireless projects. Take the first steps toward automating your excuses away. <span class="swift-cta">Find out more about how Swift Projects makes closing out and running your projects better.</span></div>
         </div>
         <div class="cta" ui-sref="swift">Swift Projects <i class="icon ion-android-arrow-dropright"></i></div>
     </section>
