--- a/views/main.html
+++ b/views/main.html
@@ -31,7 +31,7 @@
                 <div class="head">We are Close Out Specialists</div>
                 <div class="sub">close out Services that get you paid, Starting at $199 per site-project.</div>
             </div>
-            <div class="body">For too long people have said that you can't have it cheaper, faster, and better, all at the same time. Those days are now over. We've reached a new era of technology, where previous paradigms are no longer true. Ontel helps its clients to stay at the forefront of this change, where since our founding, we've been entrusted with over 1500+ site-project close outs. All done cheaper, faster, and better. Close outs are a drag, we make them drag less. We'll show you how.</div>
+            <div class="body">Close out packages are a drag, but we can make them more fun. We've been entrusted with over 1500+ site-project close outs since our start. All of them done cheaper, faster, and better simply because we specialize in them. Find out how easy it can be to close out and get paid faster and keep more for your profits. Try us out for free.</div>
         </div>
         <div class="cta-container">
              <div class="cta" ui-sref="closeout">close out MGMT <i class="icon ion-android-arrow-dropright"></i></div> 
