--- a/views/main.html
+++ b/views/main.html
@@ -43,7 +43,7 @@
                 <div class="head">close out Software</div>
                 <div class="sub">The most powerful close out software in the world, starting at $99 per month.</div>
             </div>
-            <div class="body">Swift Projects™ combines aspects of products like SharePoint and Dropbox, with added innovation found no where else, to make a mobile friendly, robust, software platform built specifically for runnin wireless projects. Take the first steps toward automating your excuses away. <span class="swift-cta">Find out more about how Swift Projects makes closing out and running your projects better.</span></div>
+            <div class="body">Swift Projects™ combines aspects of products like SharePoint and Dropbox, with added innovation found no where else, to make a mobile friendly, robust, software platform built specifically for running wireless projects. Take the first steps toward automating your excuses away. <span class="swift-cta">Find out more about how Swift Projects makes closing out and running your projects better.</span></div>
         </div>
         <div class="cta" ui-sref="swift">Swift Projects <i class="icon ion-android-arrow-dropright"></i></div>
     </section>
