--- a/views/closeout.html
+++ b/views/closeout.html
@@ -2,6 +2,7 @@
 <div id="" ng-class="{'drop-active': drop}" data-sr-container>
   <div class="product-header closeout">
     <div class="landing-text">close out Management</div>
+	
   </div>
   <div class="product-container">
     <div class="section intro">
@@ -11,7 +12,7 @@
           We started Ontel on the premise that we could make closing out better for our clients, and for 3 years we've existed because of our ability to make that happen. We are about handing over a package to your client that reflects professionlism, and helps you raise the standard bar to a level your competition can't reach. If you don't want to go back to site for missing items and punch issues, or if you'd like to signal to your client that you're ready for more work, then we have solutions. 
         </p>
         <p>
-         No other company focuses as much on the close out process, and the advantages gained from this specialization keeps our clients on top of the expanding demands and shortened timelines their customers expect. It pays  off in bigger market share and improved cash-flow. Our C.O.P. management services are perfect for large volume projects with demanding timelines, and scale up and down with demand to augment your construction and project management resources as needed with no commitment. 
+         No other company focuses as much on the close out process, and the advantages gained from this specialization keeps our clients on top of the expanding demands and shortened timelines their customers expect. It pays  off in bigger market share and improved cash-flow. Our C.O.P. management services are perfect for large volume projects with demanding timelines, and scale up and down with demand to augment your construction and project management resources as needed without commitment. 
         </p>
         <p>
           Our close out management services come with a risk-free proposition. We offer your first package at no cost, so that you know we are committed to our clients taking less risk and having more to gain when they work with us than any other solution available.
