Main text update

--- a/views/main.html
+++ b/views/main.html
@@ -29,7 +29,7 @@
         <div class="section-content">
             <div class="heading">
                 <div class="head">We are Close Out Specialists</div>
-                <div class="sub">close out Services that get you paid, Starting at $199 per site-project.</div>
+                <div class="sub">close out management that gets you paid, Starting at $199 per site-project.</div>
             </div>
             <div class="body">Close out packages are a drag, but they no longer have to be. Since our founding, we've been entrusted with over 1500+ site-project close outs since our start. All of them done cheaper, faster, and better because we specialize in them. Find out how easy it can be to close out, get paid, and keep more for your profits. You can even try our close out management services out for free, click below to find out more.</div>
         </div>
