--- a/views/main.html
+++ b/views/main.html
@@ -31,7 +31,7 @@
                 <div class="head">We are Close Out Specialists</div>
                 <div class="sub">close out management that gets you paid, Starting at $199 per site-project.</div>
             </div>
-            <div class="body">Close out packages are a drag, but they no longer have to be. Since our founding, we've been entrusted with over 1500+ site-project close outs since our start. All of them done cheaper, faster, and better because we specialize in them. Find out how easy it can be to close out, get paid, and keep more for your profits. You can even try our close out management services out for free, click below to find out more.</div>
+            <div class="body">Close out packages are a drag, but they no longer have to be. Since our founding, we've been entrusted with over 1500+ site-project close outs, all done cheaper, faster, and better than traditional teams. Our clients trust us because we are specialists that start small and prove ourselves over time. Find out how easy it can be to close out, get paid, and keep more for your profits. You can even try our close out management services out for free.</div>
         </div>
         <div class="cta-container">
              <div class="cta" ui-sref="closeout">close out MGMT <i class="icon ion-android-arrow-dropright"></i></div> 
