--- a/views/pricing.html
+++ b/views/pricing.html
@@ -11,9 +11,11 @@
           <div>
             <div class="body">
               <ul>
-                <li>Free initial organization setup and orientation for small businesses of 20 users or less</li>
+                
                 <li><span class="price-emphasis">$99</span> per month for up to 20 managed users and unlimited guests with a 1 year agreement - includes 1TB of data per user</li>
-				<li><span class="price-emphasis">Free Trial</span> 1 month free trial of Swift Projects for your team</li>
+				<li><span class="price-emphasis">Free</span> organization setup and orientation for small businesses of 20 users or less</li>
+				<li><span class="price-emphasis">Free</span> Project template design by an experienced telecommunications manager for your first project</li>
+				<li><span class="price-emphasis">Free</span> 1 month free trial of Swift Projects for your team</li>
 				<li><span class="price-emphasis">Contact Us</span> for quotes on additional users and data</li>
               </ul>
             </div>
