--- a/views/closeout.html
+++ b/views/closeout.html
@@ -12,7 +12,7 @@
          No other company focuses as much on the close out process, and the advantages gained from this specialization keeps our clients on top of the expanding demands and shortened timelines their customers expect. It pays  off in bigger market share and improved cash-flow. Our C.O.P. management services are perfect for large volume projects with demanding timelines, and scale up and down with demand to augment your construction and project management resources as needed without commitment. 
         </p>
         <p>
-          Our close out management services come with a risk-free proposition. We offer your first package at no cost, so that you know we are committed to our clients taking less risk and having more to gain when they work with us than any other solution available.
+          Our close out management services come with a risk-free proposition. We offer your first package at no cost, we do this because we are committed to our clients taking less risk and having more to gain when they work with us than any other company or solution can offer.
         </p>
       </div>
     </div>
