--- a/views/pricing.html
+++ b/views/pricing.html
@@ -12,7 +12,7 @@
             <div class="body">
               <ul>
                 
-                <li><span class="price-emphasis">$99</span> per month for up to 20 managed users and unlimited guests with a 1 year agreement - includes 1TB of data per user</li>
+                <li><span class="price-emphasis">$99</span> per month for up to 20 managed users and unlimited guests - includes 1TB of data per user</li>
 				<li><span class="price-emphasis">Free</span> organization setup and orientation for small businesses of 20 users or less</li>
 				<li><span class="price-emphasis">Free</span> Project template design by an experienced telecommunications manager for your first project</li>
 				<li><span class="price-emphasis">Free</span> 1 month free trial of Swift Projects for your team</li>
@@ -35,7 +35,7 @@
                 <li><span class="price-emphasis">$225</span> per C.O.P. without your use of Swift Projects, for all carriers</li>
 				<li><span class="price-emphasis">$199</span> per C.O.P. with your use of Swift Projects, for all carriers</li> 
                 <li><span class="price-emphasis">$75</span> per L.L. package. Landlord packages are in addition to the C.O.P. for the carrier (Crown, SBA, ATC, etc.)</li>
-                <li><span class="price-emphasis">$40</span> per revision round. This fee is applied for each round of revisions based on undocumented requirements from the customer, punch-item corrections, or missing files upon reporting to Ontel a site is ready for close out </li>
+                <li><span class="price-emphasis">$40</span> per revision round. This fee is applied for each round of revisions based on undocumented requirements from the customer, punch-item corrections, or missing files upon reporting to Ontel a site is ready for close out</li>
 				<li><span class="price-emphasis">Free</span> for your first C.O.P.</li>
               </ul>
             </div>
